[package]
name = "torg"
version = "0.1.0"
authors = ["Brendan Fields, Alex Bethel <abethel@cs.nmt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
orgize = "0.8.4"
tui = { version = "0.15.0", default-features = false, features = ['crossterm'] }
