[package]
name = "torg"
version = "0.1.0"
authors = ["Brendan Fields, Alex Bethel <abethel@cs.nmt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20.0"
tui = { version = "0.15.0", default-features = false, features = ['crossterm'] }

# orgize = "0.8.4"
# We need https://github.com/PoiScript/orgize/pull/32, which hasn't
# been merged yet. In the meantime, use a custom fork.
orgize = { git = "https://github.com/AlexBethel/orgize" }
